[gd_scene load_steps=7 format=2]

[ext_resource path="res://PlatformFalling.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/new tile set/PlatformCen.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/new tile set/PlatformDer.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/new tile set/PlatformIzq.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 8 )

[node name="PlatformFalling" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="PlatformCen" type="Sprite" parent="."]
modulate = Color( 0.8, 0.8, 0.8, 1 )
texture = ExtResource( 2 )

[node name="PlatformIzq" type="Sprite" parent="PlatformCen"]
position = Vector2( -32, 0 )
texture = ExtResource( 4 )

[node name="PlatformDer" type="Sprite" parent="PlatformCen"]
position = Vector2( 32, 0 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -16 )
shape = SubResource( 2 )

[node name="TimerFade" type="Timer" parent="."]
wait_time = 0.05

[node name="TimerQueueOut" type="Timer" parent="."]
wait_time = 1.5
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="TimerFade" to="." method="_on_TimerFade_timeout"]
[connection signal="timeout" from="TimerQueueOut" to="." method="_on_TimerQueueOut_timeout"]
